--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
         <p>Worked in personal project of Web Development - Website for skill showcase, Product Website etc.</p>
       </div>
     </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <a class="button" href="mailto:vivekprajapti2048@gmail.com">CONTACT ME</a>
-    </div>
   </div>
+  <hr />
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/vivekprajapati2048/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/imv1v3k">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <a class="social-media" href="mailto:vivekprajapti2048@gmail.com"><img src="images/gmail.png" alt="gmail icon" height="25" width="25" /></a>
+      <a class="social-media" href="https://www.linkedin.com/in/vivekprajapati2048/"><img src="images/linkedin.png" alt="linkedin icon" height="25" width="25" /></a>
+      <a class="social-media" href="https://twitter.com/imv1v3k"><img src="images/twitter.png" alt="twitter icon" height="25" width="25" /></a>
+      <a class="social-media" href="https://www.facebook.com/imv1v3k/"><img src="images/facebook.png" alt="facebook icon" height="25" width="25" /></a>
+    </div>
+
     <p>© 2021 Vivek Prajapati.</p>
   </div>
 
