--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud image">
 
     <h1>I'm Vivek.</h1>
-    <p>a <span class="span">Machine Learning Engineer</span> & a <span class="span">Web Developer</span>.</p>
+    <h2><span class="span">ML Engineer</span> & <span class="span">Web Developer</span>.</h2>
 
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
     <img src="images/mountain.png" alt="mountain image">
@@ -23,45 +23,48 @@
 
   <div class="middle-container">
     <div class="profile">
-      <img src="images\vivek.png" alt="profile picture of vivek" width="150" height="150">
-      <h3>
-        Hello there.
-        <!-- <strong> Machine Learning Intern</strong> at <a href="https://www.techexcel.eu/">TechExcel Ltd</a>. -->
-      </h3>
-      <p>I am a Machine Learning / AI Intern at <a href="https://www.techexcel.eu/">TechExcel Ltd</a>. I enjoy learning new technologies 💻 and read books 📘.</p>
+      <img src="images\vivek.png" alt="profile picture of vivek" width="250" height="250">
+
+      <p class="intro">
+        I am a Machine Learning / AI Intern at <a href="https://www.techexcel.eu/">TechExcel Ltd</a>. I enjoy learning new technologies 💻 and read books 📘.
+      </p>
+
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
-        <img class="" src="images/dl.png" alt="deep learning icon" height="100" width="100">
-        <h3>Statistical ML and DL</h3>
-        <p>Experienced working in Classical Machine Learning projects - both Supervised and Unsupervised Learning, Artificial Neural Networks and Deep Learning, Computer Vision - Image and Video Processing with OpenCV etc</p>
+        <img class="skill-image" src="https://media.giphy.com/media/eljCVpMrhepUSgZaVP/giphy.gif" alt="deep learning icon">
+        <h3 class="skill-title">Machine Learning & Deep Learning</h3>
+        <p class="skill-description">Experienced working in Classical Machine Learning projects - both Supervised and Unsupervised Learning, Artificial Neural Networks and Deep Learning, Computer Vision - Image and Video Processing with OpenCV etc
+        </p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/nlp.png" alt="natural language processing icon" height="100" width="100">
-        <h3>Natural Language Processing</h3>
-        <p>Worked in NLP based projects like Conversational AI Chatbots development, Customer Sentiment Analysis, Fake New Detection etc.</p>
+        <img class="skill-image" src="https://media.giphy.com/media/gT9QzllTygbedDOeRm/giphy.gif" alt="natural language processing icon">
+        <h3 class="skill-title">Natural Language Processing</h3>
+        <p class="skill-description">Worked in NLP based projects like Conversational AI Chatbots development, Customer Sentiment Analysis, Fake New Detection etc.</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images/coding.png" alt="coding icon" height="100" width="100">
-        <h3>Web Development</h3>
-        <p>Worked in personal project of Web Development - Website for skill showcase, Product Website etc.</p>
+        <img class="skill-image" src="https://media.giphy.com/media/L8K62iTDkzGX6/giphy.gif" alt="coding icon">
+        <h3 class="skill-title">Web Development</h3>
+        <p class="skill-description">Worked in personal project of Web Development - Website for skill showcase, Product Website etc.</p>
       </div>
     </div>
-  </div>
-  <hr />
-
-  <div class="bottom-container">
+    <hr />
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <a class="social-media" href="mailto:vivekprajapti2048@gmail.com"><img src="images/gmail.png" alt="gmail icon" height="25" width="25" /></a>
-      <a class="social-media" href="https://www.linkedin.com/in/vivekprajapati2048/"><img src="images/linkedin.png" alt="linkedin icon" height="25" width="25" /></a>
-      <a class="social-media" href="https://twitter.com/imv1v3k"><img src="images/twitter.png" alt="twitter icon" height="25" width="25" /></a>
-      <a class="social-media" href="https://www.facebook.com/imv1v3k/"><img src="images/facebook.png" alt="facebook icon" height="25" width="25" /></a>
+      <p class="contact-message">
+        Got a question? Let's get connected.
+      </p>
+      <a class="button" href="mailto:vivekprajapti2048@gmail.com">CONTACT ME</a>
     </div>
+  </div>
 
-    <p>© 2021 Vivek Prajapati.</p>
+  <div class="bottom-container">
+    <a href="https://www.linkedin.com/in/vivekprajapati2048/"><img class="social-media" src="images/linkedin.png" alt="linkedin icon"/></a>
+    <a href="https://twitter.com/imv1v3k"><img class="social-media" src="images/twitter.png" alt="twitter icon"/></a>
+    <a href="https://www.facebook.com/imv1v3k/"><img class="social-media" src="images/facebook.png" alt="facebook icon"/></a>
+    <p class="copyright">© 2021 Vivek Prajapati.</p>
   </div>
 
 </body>
