--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="images\vivek.png" alt="profile picture of vivek" width="250" height="250">
 
       <p class="intro">
-        I am a Machine Learning / AI Intern at <a href="https://www.techexcel.eu/">TechExcel Ltd</a>. I enjoy learning new technologies 💻 and read books 📘.
+        I am a Machine Learning / AI Engineer.</a><br> I enjoy learning new technologies 💻 and read books 📘.
       </p>
 
     </div>
